--- a/src/app/features/components/file-browser/file-viewer/file-viewer-modal.component.scss
+++ b/src/app/features/components/file-browser/file-viewer/file-viewer-modal.component.scss
@@ -85,16 +85,23 @@
        Media Types
        ========================================================================== */
     .preview-content {
-      max-width: 100%;
+      display: block;
       border-radius: var(--radius-xxs);
     }
 
     .image-content {
-      width: 100%;
-      transition: transform var(--transition-standard);
+      max-width: 100%;
+      max-height: 100%;
+      object-fit: contain;
+      width: auto;
+      height: auto;
     }
 
     .video-content {
+      max-width: 100%;
+      max-height: 100%;
+      width: auto;
+      height: auto;
       background: var(--secondary-background);
     }
 
@@ -143,7 +150,6 @@
         font-size: var(--font-size-md);
         white-space: pre-wrap;
         word-break: break-word;
-        min-width: 600px;
         user-select: text;
         cursor: text;
         margin: 0;
